// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 huKtjk"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_70"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Badge
      </p>
    </section>
  </div>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 huKtjk"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_71"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        1-Digit
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_72"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="21"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            21
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        2-Digit
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_73"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="321"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            321
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        3-Digit
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_74"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="4321"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            4321
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        4-Digit
      </p>
    </section>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 huKtjk"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_75"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="9+"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            9+
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Max 10
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_76"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="99+"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            99+
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Max 100
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_77"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="999+"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            999+
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Max 1000
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_78"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="9999+"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            9999+
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Max 10k
      </p>
    </section>
  </div>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 huKtjk"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_79"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iQZTDE"
          id={null}
          label="Info"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            Info
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Info
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_80"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 biHJiu"
          id={null}
          label="Success"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            Success
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Success
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_81"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 fZPQOe"
          id={null}
          label="Warning"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            Warning
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Warning
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_82"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="Alert"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            Alert
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Alert
      </p>
    </section>
  </div>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 huKtjk"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_83"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 fjokJi"
          id={null}
          label={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-info fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 CCPOD"
            color="neutral20"
            data-icon="info"
            data-prefix="fas"
            focusable="false"
            fontSize="0.875em"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Info
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_84"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 eYgywA"
          id={null}
          label={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 CCPOD"
            color="neutral20"
            data-icon="check"
            data-prefix="far"
            focusable="false"
            fontSize="0.875em"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Complete
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_85"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 cOTfAA"
          id={null}
          label={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 CCPOD"
            color="neutral20"
            data-icon="bookmark"
            data-prefix="fas"
            focusable="false"
            fontSize="0.875em"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Help
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_86"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 nXvYR"
          id={null}
          label={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-exclamation fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 CCPOD"
            color="neutral20"
            data-icon="exclamation"
            data-prefix="fas"
            focusable="false"
            fontSize="0.875em"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Alert
      </p>
    </section>
  </div>
</section>
`;

exports[` 6`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 huKtjk"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_87"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iYhgcQ"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Top-Left
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_88"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 fLaBfc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Bottom-Left
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_89"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Top-Right
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_90"
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 bePYvR"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 cpakTw"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iCMaGv"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Bottom-Right
      </p>
    </section>
  </div>
</section>
`;
